--- a/package.json
+++ b/package.json
@@ -4,5 +4,5 @@
 "main": "server.js",
 "type": "commonjs",
 "scripts": { "start": "node server.js" },
-"dependencies": { "express": "^4.18.3", "@libsql/client": "^0.15.1" }
+"dependencies": { "express": "^4.18.3", "@libsql/client": "^0.15.1", "@resvg/resvg-js": "^2.6.2" }
 }
